--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,10 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"      tools:context=".MainActivity">
 
     <item
+        android:id="@+id/action_help"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:orderInCategory="1"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_refresh"
         android:title="@string/scan_btn_text"
         android:icon="@android:drawable/ic_popup_sync"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         app:showAsAction="ifRoom"
         />
 
